[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtvmcore_rust = { path = "../" }
#dtvmcore_rust = { path = "../DTVM/rust_crate" }
cty = "0.2.2"
libc = { version = "0.2.121" }
hex = "0.4"
log = { version = "0.4", optional = true }
env_logger = { version = "0.10" }
sha3 = "0.10"

[[bin]]
name = "main"
path = "src/main.rs"

[[example]]
name = "counter"
path = "src/counter_test.rs"

[[example]]
name = "token"
path = "src/simple_token_test.rs"

[[example]]
name = "base"
path = "src/base_test.rs"

[[example]]
name = "contract"
path = "src/contract_calls_test.rs"

[[example]]
name = "host"
path = "src/advanced_host_test.rs"

